using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace theMovies.Model
{
    public class Screen
    {
        public int ScreenNumber {get; set; }
        public int NumberOfSeats {get; set; }
    }
}
